Closed Bug 1351708 Opened 9 years ago Closed 9 years ago

Fix Preferences::UnregisterCallback for fuzzing.enabled

Categories

(Core :: Preferences: Backend, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: posidron, Unassigned)

Details

Attachments

(1 file)

This typo was introduced with https://bugzilla.mozilla.org/show_bug.cgi?id=1348331 and since then our fuzzing-enabled builds are failing.
Attachment #8852519 - Flags: review?(nfroyd)
Comment on attachment 8852519 [details] [diff] [review] fuzzing.enabled.diff Review of attachment 8852519 [details] [diff] [review]: ----------------------------------------------------------------- Doh! Have we thought about having a build in automation that enables fuzzing, so we avoid breakage like this? Please file a bug in Core/Build Config for that.
Attachment #8852519 - Flags: review?(nfroyd) → review+
Keywords: checkin-needed
> Doh! Have we thought about having a build in automation that enables > fuzzing, so we avoid breakage like this? Please file a bug in Core/Build > Config for that. IIRC that's planned already, decoder?
Flags: needinfo?(choller)
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/d13e65fc7379 Fix Preferences::UnregisterCallback typo for fuzzing.enabled. r=froydnj
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
There was bug 1346016 for creating a TC job, but I guess that alone doesn't help if it isn't Tier 1 and nobody cares for the failures.
Flags: needinfo?(choller)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: