Bug 1351708 - Fix Preferences::UnregisterCallback typo for fuzzing.enabled. r=froydnj